# alxcheck

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml  python-unittests.yml
alx_test/: main.py
alx_test/checks/: c.py  general.py  javascript.py  python.py
alx_test/tests/: test_general.py  test_javascript.py  test_python.py
alx_test/utils/: error_logging.py
alxcheck/: main.py
alxcheck/checks/: __init__.py  autoprototype.py  c.py  general.py  javascript.py  python.py
alxcheck/tests/: base_test.py  test_autoprototype.py  test_general.py  test_helpers.py  test_javascript.py  test_python.py
alxcheck/utils/: error_logging.py  helpers.py
