[project]
name = "alx-test"
version = "0.0.3"
authors = [{ name="Emmanuel Nwafor", email="nwaforemmanuel005@gmail.com"}]
description = "ALX test Suite. Shell Utility that checks for some of ALX_SWE Project Requirements"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["alx", "alx test", "test", "checks", "test suite", "green squares"]

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88   # Adjust to your preferred line length
target-version = ['py37']  # Specify your target Python version
exclude = 'venv/'

[project.urls]
"Homepage" = "https://github.com/Emmo00/alx_test.git"
"Bug Tracker" = "https://github.com/Emmo00/alx_test/issues"
