[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88   # Adjust to your preferred line length
target-version = ['py37']  # Specify your target Python version
exclude = 'venv/'

[project.urls]
"Homepage" = "https://github.com/Emmo00/alxcheck.git"
"Bug Tracker" = "https://github.com/Emmo00/alxcheck/issues"
