[metadata]
name = alx-test
version = 0.0.1
author = Nwafor Emmanuel
author_email = nwaforemmanuel005@gmail.com
description = Shell Utility that checks for some of ALX_SWE Project Requirements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Emmo00/alx-test
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    alx_test = alx_test.main:main
