[metadata]
name = alxcheck
version = 0.0.3
author = Nwafor Emmanuel
author_email = nwaforemmanuel005@gmail.com
description = ALX test Suite. Shell Utility that checks for some of ALX Software Engineering Project Requirements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Emmo00/alx-test
license = MIT
license_files = LICENSE
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords = alx, alx test, test, checks, test suite

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    pycodestyle
    colorama

[options.entry_points]
console_scripts =
    alxcheck = alxcheck.main:main
